Update all email addresses to design_jig@naver.com

--- a/guide.html
+++ b/guide.html
@@ -833,8 +833,8 @@
                 style="margin-top: 3rem; margin-bottom: 2rem; opacity: 0.6; font-size: 0.85rem; line-height: 1.8;">
                 <p>경기도 화성시 반송동 3-10</p>
                 <p>연락처: <a href="tel:010-7653-5386" style="color: white; text-decoration: none;">010-7653-5386</a></p>
-                <p>이메일: <a href="mailto:designjig.office@gmail.com"
-                        style="color: white; text-decoration: none;">designjig.office@gmail.com</a></p>
+                <p>이메일: <a href="mailto:design_jig@naver.com"
+                        style="color: white; text-decoration: none;">design_jig@naver.com</a></p>
             </div>
 
             <p class="footer-copyright" style="font-size: 0.8rem; opacity: 0.4;">
