--- a/portfolio.html
+++ b/portfolio.html
@@ -775,7 +775,7 @@
             <div class="footer-info">
                 <p>경기도 용인시</p>
                 <p>연락처: <a href="tel:031-000-0000">031-000-0000</a></p>
-                <p>이메일: <a href="mailto:designjig.office@gmail.com">designjig.office@gmail.com</a></p>
+                <p>이메일: <a href="mailto:design_jig@naver.com">design_jig@naver.com</a></p>
             </div>
             <div class="footer-sns">
                 <a href="https://blog.naver.com/sweet00700" target="_blank" title="네이버 블로그" aria-label="네이버 블로그">
@@ -816,7 +816,7 @@
         <div class="footer-info">
             <p>경기도 화성시 반송동 3-10</p>
             <p>연락처: <a href="tel:010-7653-5386">010-7653-5386</a></p>
-            <p>이메일: <a href="mailto:designjig.office@gmail.com">designjig.office@gmail.com</a></p>
+            <p>이메일: <a href="mailto:design_jig@naver.com">design_jig@naver.com</a></p>
         </div>
         <div class="footer-sns">
             <a href="https://blog.naver.com/sweet00700" target="_blank" title="네이버 블로그" aria-label="네이버 블로그">
