Fix dashboard link: add explicit showProfitAnalysisTab function

--- a/adminwonpro.html
+++ b/adminwonpro.html
@@ -5177,7 +5177,7 @@
                             </div>
 
                             <!-- 3. 원가/정산 요약 (클릭 시 원가관리표로 이동) -->
-                            <button class="dashboard-card card-cost-summary" onclick="showCustomerTab('stats')">
+                            <button class="dashboard-card card-cost-summary" onclick="showProfitAnalysisTab()">
                                 <h3>💰 운영 원가 요약 <span
                                         style="font-size:12px; font-weight:400; opacity:0.7; margin-left:auto;">클릭하여 상세
                                         보기 →</span></h3>
@@ -8803,6 +8803,11 @@
             if (tabId === 'dashboard') {
                 if (typeof renderDashboard === 'function') renderDashboard();
             }
+        }
+
+        function showProfitAnalysisTab() {
+            console.log('Switching to Profit Analysis Tab (stats)');
+            showCustomerTab('stats');
         }
 
         function renderDashboard() {
